...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/offers_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/back_top_fab"
...
            app:pressedTranslationZ="12dp"
            app:backgroundTint="#eb3d5afe"
            app:rippleColor="@android:color/white"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/error_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:background="@color/colorBackground"
            android:orientation="vertical"
            android:visibility="gone">
...
